fixed alignment between logo and title in header

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ header{
 
 #logo{
     height: 60px;
+    vertical-align: top;
 }
 
 h1{
